feat(chat): 优化群名片修改和表情包管理功能